Commit For Pk-1491

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -842,7 +842,7 @@
                 <InputTextArea class="form-control" maxlength="200" @bind-Value="@CreateGroupBuyDto.InvoiceNote"></InputTextArea>
             </div>
         </div>
-        <div class="row">
+       @*  <div class="row">
             <div class="col-2"></div>
             <div class="col-2">
                 <label>@L["TaxType"]</label>
@@ -856,7 +856,7 @@
                     }
                 </Select>
             </div>
-        </div>
+        </div> *@
         <Divider></Divider>
         <div class="row">
             <div class="col-2">@L["AdvanceSetting"]</div>
