--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -829,7 +829,7 @@
                 <InputTextArea class="form-control" maxlength="200" @bind-Value="@EditGroupBuyDto.InvoiceNote"></InputTextArea>
             </div>
         </div>
-        <div class="row">
+   @*      <div class="row">
             <div class="col-2"></div>
             <div class="col-2">
                 <label>@L["TaxType"]</label>
@@ -843,7 +843,7 @@
                     }
                 </Select>
             </div>
-        </div>
+        </div> *@
         <Divider></Divider>
         <div class="row">
             <div class="col-2">@L["AdvanceSetting"]</div>
