--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -85,7 +85,7 @@
                                         <NumericEdit @bind-Value="setting.Spend" TValue="int" />
                                     </Column>
                                     <Column ColumnSize="ColumnSize.Is6">
-                                        <Label>@L["ToReceivePoints"]</Label>
+                                        <Label>@L["ToUsePoints"]</Label>
                                         <NumericEdit @bind-Value="setting.Points" TValue="int" />
                                     </Column>
                                 }
