Commit For Pk-1538

--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditGetSetting.razor
@@ -16,6 +16,11 @@
 @inject GroupBuyAppService GroupBuyAppService
 @inject IShoppingCreditEarnSettingAppService ShoppingCreditEarnSettingAppService
 @inject NavigationManager NavigationManager
+<style>
+    input.is-valid ~ .form-check-label {
+    color: #505150!important;
+}
+</style>
 <Div>
     <Row>
         <Column ColumnSize="ColumnSize.Is6">
