--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -15,6 +15,11 @@
 @inject IGroupBuyAppService GroupBuyAppService
 @inject IShoppingCreditUsageSettingAppService ShoppingCreditUsageSettingAppService
 @inject NavigationManager NavigationManager
+<style>
+    input.is-valid ~ .form-check-label {
+    color: #505150!important;
+}
+</style>
 <Div>
     <Row>
         <Column ColumnSize="ColumnSize.Is6">
