--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -66,7 +66,12 @@
                                 <Label>@L["DeductionMethod"]</Label>
                                 <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="DeductionMethod" @bind-CheckedValue="CreateUpdateUsage.DeductionMethod">
                                     <ChildContent>
-                                        <Radio Value="@("UnifiedCalculation")">@L["UnifiedCalculation:"]<NumericEdit @bind-Value="CreateUpdateUsage.UnifiedMaxDeductiblePoints" Max="100" TValue="int" />%</Radio>
+                                        <Radio Value="@("UnifiedCalculation")">@L["UnifiedCalculation:"]
+                                            @if (CreateUpdateUsage.DeductionMethod == "UnifiedCalculation")
+                                            {
+                                                <NumericEdit @bind-Value="CreateUpdateUsage.UnifiedMaxDeductiblePoints" Max="100" TValue="int" /><label>%</label>
+                                            }
+                                            </Radio>
                                         <Radio Value="@("StagedCalculation")">@L["StagedCalculation"]</Radio>
                                     </ChildContent>
                                     <Feedback>
