Commit For Pk-1547

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -2921,7 +2921,7 @@
                 <div class="row my-2">
                     <label class="form-label">@L["ShippingNumber"]</label>
                     <div class="col-12 mb-2">
-                        <InputText class="form-control" @bind-Value="@shipments.ShippingNumber"></InputText>
+                        <InputText class="form-control" disabled @bind-Value="@shipments.ShippingNumber"></InputText>
 
                     </div>
                 </div>
