Commit For Pk-1538

--- a/src/Kooco.Pikachu.Blazor/Pages/Campaigns/CreateCampaign.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Campaigns/CreateCampaign.razor
@@ -29,7 +29,11 @@
     .form-group[mb0] {
         margin-bottom: 0px;
     }
+       input.is-valid ~ .form-check-label {
+    color: #505150!important;
+}
 </style>
+
 <Div Class="rounded-cards">
     <Div Class="d-flex align-items-center">
         <PikachuButton Clicked="@Cancel">
